obj base type no longer tied to the type uri. enables types to be outside the primary URI type hiearchy.

--- a/platformio.ini
+++ b/platformio.ini
@@ -4,7 +4,7 @@
 
 [platformio]
 name = FhatOS
-description = A Distributed Operating System for ESP32 and ESP8266 Microcontrollers
+description = A Distributed Embedded Systems Operating System
 extra_configs = .wifi.ini
 boards_dir = board
 
@@ -38,7 +38,7 @@ build_flags =
 
 [psram]
 build_flags =
-    -DBOARD_HAS_PSRAM
+    -DBOARD_HAS_PSRAM=1
     -DSPIRAM_USE_MALLOC=1
     -DCONFIG_SPIRAM_USE=1
     -DCONFIG_SPIRAM_SPEED_80M=1
@@ -46,7 +46,7 @@ build_flags =
     -DCONFIG_SPIRAM_MALLOC_ALWAYSINTERNAL=64
     -DFOS_EXTERNAL_MEMORY_LIMIT=64
     -DCONFIG_SPIRAM_CACHE_WORKAROUND=1
-    -mfix-esp32-psram-cache-issue
+    -mfix-esp32-psram-cache-issue=1
 
 ######################################
 ##### ESP32/8266 MICROPROCESSORS #####
