more docs. came up with the idea of using ansi art as the diagramming tehcnique. retro and in line with the FhatOS look.

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,10 @@ boards_dir = board
 ##### ESP32/ESP8266 BUILD FLAGS #####
 #####################################
 
+[general]
+build_flags =
+    -DCONFIG_COMPILER_CXX_EXCEPTIONS=1
+
 [partition]
 large_code = board/partition/large_code.csv
 
