--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -222,6 +222,7 @@ IF(BUILD_NATIVE)
     ENDIF()
     ADD_DEFINITIONS(
             -DNATIVE
+            -DBUILD_DOCS=${BUILD_DOCS}
             -DCMAKE_SYSTEM=${CMAKE_SYSTEM}
             -DCMAKE_SYSTEM_NAME=${CMAKE_SYSTEM_NAME}
             -DCMAKE_SYSTEM_PROCESSOR=${CMAKE_SYSTEM_PROCESSOR})
