--- a/platformio.ini
+++ b/platformio.ini
@@ -46,11 +46,18 @@ build_flags =
     -DSPIRAM_USE_MALLOC=1
     -DCONFIG_SPIRAM_USE=1
     -DCONFIG_SPIRAM_SPEED_80M=1
-# default 4096 (set to the same value as FOS_EXTERNAL_MEMORY_LIMIT)
-    -DCONFIG_SPIRAM_MALLOC_ALWAYSINTERNAL=64
-    -DFOS_EXTERNAL_MEMORY_LIMIT=64
+    -DCONFIG_SPIRAM_MALLOC_ALWAYSINTERNAL=8
+    -DFOS_EXTERNAL_MEMORY_LIMIT=8
     -DCONFIG_SPIRAM_CACHE_WORKAROUND=1
     -mfix-esp32-psram-cache-issue
+
+[memory]
+build_flags =
+    -DCONFIG_ESP_MAIN_TASK_STACK_SIZE=8192
+    -DconfigMINIMAL_STACK_SIZE=8192
+    -DSET_LOOP_TASK_STACK_SIZE=8192
+    -DFOS_ESP_THREAD_STACK_SIZE=16192
+    -DFOS_ESP_FIBER_STACK_SIZE=16192
 
 ######################################
 ##### ESP32/8266 MICROPROCESSORS #####
@@ -94,6 +101,8 @@ build_unflags =
 build_flags =
     ${common.build_flags}
     ${wifi.build_flags}
+    ${memory.build_flags}
+    -DCMAKE_SYSTEM=espressif32/arduino
     -std=gnu++2a
     -DARDUINO_USB_CDC_ON_BOOT=1
     #-DCONFIG_ADC_CAL_EFUSE_TP_ENABLE=0
@@ -102,19 +111,11 @@ build_flags =
     #-DCONFIG_LWIP_IPV6=0
     #-DCONFIG_FREERTOS_WATCHPOINT_END_OF_STACK=1
     #-DCONFIG_FREERTOS_CHECK_STACKOVERFLOW=1
-    #-DCONFIG_ESP_MAIN_TASK_STACK_SIZE=4096
     # default 65536
-    -DSET_LOOP_TASK_STACK_SIZE=16384
     ###############################
     ####### HEAP DEBUGGING ########
     ###############################
-    -DCONFIG_HEAP_TRACING_DEST=1
-    #####################################
-    ### FHATOS-SPECIFIC CONFIGURATION ###
-    #####################################
-    -DFOS_ESP_THREAD_STACK_SIZE=16384
-    -DFOS_ESP_FIBER_STACK_SIZE=16384
-    -DCMAKE_SYSTEM=espressif32/arduino
+    #-DCONFIG_HEAP_TRACING_DEST=1
 
 
 
