tweaking macros. getting all FhatOS used macros in namespace -- FOS_XXX_YYY.

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,9 @@ boards_dir = board
 ##### ESP32/ESP8266 BUILD FLAGS #####
 #####################################
 
+[var]
+stack_size = 8192
+
 [general]
 build_flags =
     -DCONFIG_COMPILER_CXX_EXCEPTIONS=1
@@ -41,21 +44,23 @@ build_flags =
     -DCONFIG_BT_CLASSIC_ENABLED=1
 
 [psram]
+auto_psalloc_bytes = 16
 build_flags =
     -DBOARD_HAS_PSRAM=1
     -DSPIRAM_USE_MALLOC=1
     -DCONFIG_SPIRAM_USE=1
     -DCONFIG_SPIRAM_SPEED_80M=1
-    -DCONFIG_SPIRAM_MALLOC_ALWAYSINTERNAL=8
-    -DFOS_EXTERNAL_MEMORY_LIMIT=8
+    -DCONFIG_SPIRAM_MALLOC_ALWAYSINTERNAL=${this.auto_psalloc_bytes}
+    -DFOS_EXTERNAL_MEMORY_LIMIT=${this.auto_psalloc_bytes}
     -DCONFIG_SPIRAM_CACHE_WORKAROUND=1
     -mfix-esp32-psram-cache-issue
 
 [memory]
+stack_size = 8192
 build_flags =
-    -DCONFIG_ESP_MAIN_TASK_STACK_SIZE=8192
-    -DconfigMINIMAL_STACK_SIZE=8192
-    -DSET_LOOP_TASK_STACK_SIZE=8192
+    -DCONFIG_ESP_MAIN_TASK_STACK_SIZE=${this.stack_size}
+    -DconfigMINIMAL_STACK_SIZE=${this.stack_size}
+    -DSET_LOOP_TASK_STACK_SIZE=${this.stack_size}
     -DFOS_ESP_THREAD_STACK_SIZE=16192
     -DFOS_ESP_FIBER_STACK_SIZE=16192
 
@@ -72,7 +77,6 @@ build_flags =
     -DFOS_SERIAL_BAUDRATE=${this.monitor_speed}
     -DUNITY_OUTPUT_COLOR
     -DUNITY_INCLUDE_PRINT_FORMATTED
-    -Ibuild/_deps/ordered_map-src/include/
     -mtext-section-literals
     -DFOS_NAME=FhatOS
     -DFOS_VERSION=0.1-alpha
@@ -102,7 +106,7 @@ build_flags =
     ${common.build_flags}
     ${wifi.build_flags}
     ${memory.build_flags}
-    -DCMAKE_SYSTEM=espressif32/arduino
+    -DFOS_MACHINE_SUBOS=espressif32/arduino
     -std=gnu++2a
     -DARDUINO_USB_CDC_ON_BOOT=1
     #-DCONFIG_ADC_CAL_EFUSE_TP_ENABLE=0
@@ -189,20 +193,24 @@ build_flags =
     ${esp32.build_flags}
     ${psram.build_flags}
 #   ############ FHATOS #############
-    -DFOS_MACHINE_NAME=fhatos_esp32_s2_mini
-    -DCMAKE_SYSTEM_PROCESSOR=${this.board}
+    -DFOS_MACHINE_ARCH=${this.__env__}
+    -DFOS_MACHINE_MODEL=${this.board}
 
 [env:esp32-s3-pro]
 extends = esp32
 board = lolin_s3_pro
+stack_size = 4096
 build_flags =
     ${esp32.build_flags}
     ${psram.build_flags}
     ${bluetooth.build_flags}
+    ######## S3-PRO SPECIFIC #########
+    -DCONFIG_ESP_MAIN_TASK_STACK_SIZE=${this.stack_size}
+    -DconfigMINIMAL_STACK_SIZE=${this.stack_size}
+    -DSET_LOOP_TASK_STACK_SIZE=${this.stack_size}
     ############# FHATOS #############
-    -DFOS_MACHINE_NAME=fhatos_esp32_s3_pro
-    -DCMAKE_SYSTEM_PROCESSOR=${this.board}
-
+    -DFOS_MACHINE_ARCH=${this.__env__}
+    -DFOS_MACHINE_MODEL=${this.board}
 
 [env:esp32-s3-mini]
 extends = esp32
@@ -212,8 +220,8 @@ build_flags =
     ${esp32.build_flags}
     ${psram.build_flags}
 #   ############ FHATOS #############
-    -DFOS_MACHINE_NAME=fhatos_esp32_s3_mini
-    -DCMAKE_SYSTEM_PROCESSOR=${this.board}
+    -DFOS_MACHINE_ARCH=${this.__env__}
+    -DFOS_MACHINE_MODEL=${this.board}
 
 [env:esp32-t7-s3]
 extends = esp32
@@ -223,8 +231,8 @@ build_flags =
     ${psram.build_flags}
     #${bluetooth.build_flags}
     ############ FHATOS #############
-    -DFOS_MACHINE_NAME=fhatos_esp32_t7_s3
-    -DCMAKE_SYSTEM_PROCESSOR=${this.board}
+    -DFOS_MACHINE_ARCH=${this.__env__}
+    -DFOS_MACHINE_MODEL=${this.board}
 
 ###########################################
 ############ RASBERRY PI ZERO #############
