introduced a doc error at some point. but the git history shows nothing... added Otptions.printer to main_runner.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -85,14 +85,14 @@ ENDIF()
 #########################################
 SET(FOS_MACHINE_MODEL ${CMAKE_HOST_SYSTEM_PROCESSOR})
 IF(WIN32)
-    SET(PLATFORM "WIN32")
-    ADD_DEFINITIONS("-DWIN32")
+    SET(PLATFORM WIN32)
+    ADD_DEFINITIONS(-DWIN32)
 ELSEIF(APPLE)
-    SET(PLATFORM "APPLE")
-    ADD_DEFINITIONS("-DAPPLE")
+    SET(PLATFORM APPLE)
+    ADD_DEFINITIONS(-DAPPLE)
 ELSEIF(LINUX)
-    SET(PLATFORM "LINUX")
-    ADD_DEFINITIONS("-DLINUX")
+    SET(PLATFORM LINUX)
+    ADD_DEFINITIONS(-DLINUX)
     IF(${CMAKE_SYSTEM_PROCESSOR} MATCHES "armv[67]l")
         ADD_DEFINITIONS(-DRPI)
         FILE(READ "/sys/firmware/devicetree/base/model" FOS_MACHINE_MODEL)
