--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -124,15 +124,19 @@
         ####################################
         ########### TEST SUITES ############
         ####################################
-        MAKE_TESTS(language "test_fluent;test_obj;test_parser;test_insts" true)
-        MAKE_TESTS(process "test_scheduler;test_process" true)
-        MAKE_TESTS(structure/router "test_router" true)
-        MAKE_TESTS(structure/stype/key_value "test_heap" , true)
-        IF(BUILD_MQTT_TESTS)
-            MAKE_TESTS(structure/stype/mqtt "test_mqtt" , true)
+        IF(PLAYTIME)
+            MAKE_TESTS(play "play" , true)
+        ELSE()
+            MAKE_TESTS(language "test_fluent;test_obj;test_parser;test_insts" true)
+            MAKE_TESTS(process "test_scheduler;test_process" true)
+            MAKE_TESTS(structure/router "test_router" true)
+            MAKE_TESTS(structure/stype/key_value "test_heap" , true)
+            IF(BUILD_MQTT_TESTS)
+                MAKE_TESTS(structure/stype/mqtt "test_mqtt" , true)
+            ENDIF()
+            MAKE_TESTS(. "test_main;test_furi" false)
+            MAKE_TESTS(model "test_fs" true)
+            MAKE_TESTS(util "test_mutex;test_string_helper" true)
         ENDIF()
-        MAKE_TESTS(. "test_main;test_furi" false)
-        MAKE_TESTS(model "test_fs" true)
-        MAKE_TESTS(util "test_mutex" true)
         MESSAGE(STATUS "${.g}Total tests produced${..}: ${.y}${TOTAL}${..}")
     ENDIF()
