--- a/platformio.ini
+++ b/platformio.ini
@@ -109,19 +109,17 @@ build_flags =
     -DFOS_MACHINE_SUBOS=espressif32/arduino
     -std=gnu++2a
     -DARDUINO_USB_CDC_ON_BOOT=1
-    #-DCONFIG_ADC_CAL_EFUSE_TP_ENABLE=0
-    #-DCONFIG_ADC_CAL_EFUSE_VREF_ENABLE=0
-    #-DCONFIG_ADC_CAL_LUT_ENABLE=0
-    #-DCONFIG_LWIP_IPV6=0
-    #-DCONFIG_FREERTOS_WATCHPOINT_END_OF_STACK=1
-    #-DCONFIG_FREERTOS_CHECK_STACKOVERFLOW=1
-    # default 65536
-    ###############################
-    ####### HEAP DEBUGGING ########
-    ###############################
-    #-DCONFIG_HEAP_TRACING_DEST=1
-
-
+#-DCONFIG_ADC_CAL_EFUSE_TP_ENABLE=0
+#-DCONFIG_ADC_CAL_EFUSE_VREF_ENABLE=0
+#-DCONFIG_ADC_CAL_LUT_ENABLE=0
+#-DCONFIG_LWIP_IPV6=0
+#-DCONFIG_FREERTOS_WATCHPOINT_END_OF_STACK=1
+#-DCONFIG_FREERTOS_CHECK_STACKOVERFLOW=1
+# default 65536
+###############################
+####### HEAP DEBUGGING ########
+###############################
+#-DCONFIG_HEAP_TRACING_DEST=1
 
 [esp8266]
 platform = espressif826
@@ -192,10 +190,12 @@ board_build.partitions = ${partition.large_code}
 build_flags =
     ${esp32.build_flags}
     ${psram.build_flags}
-#   ############ FHATOS #############
+############ FHATOS #############
     -DFOS_MACHINE_ARCH=${this.__env__}
     -DFOS_MACHINE_MODEL=${this.board}
 
+###########################################
+###########################################
 [env:esp32-s3-pro]
 extends = esp32
 board = lolin_s3_pro
@@ -204,14 +204,29 @@ build_flags =
     ${esp32.build_flags}
     ${psram.build_flags}
     ${bluetooth.build_flags}
-    ######## S3-PRO SPECIFIC #########
+######## S3-PRO SPECIFIC #########
     -DCONFIG_ESP_MAIN_TASK_STACK_SIZE=${this.stack_size}
     -DconfigMINIMAL_STACK_SIZE=${this.stack_size}
     -DSET_LOOP_TASK_STACK_SIZE=${this.stack_size}
-    ############# FHATOS #############
+############# FHATOS #############
     -DFOS_MACHINE_ARCH=${this.__env__}
     -DFOS_MACHINE_MODEL=${this.board}
 
+###########################################
+###########################################
+[env:esp32-s3-r8]
+extends = esp32
+board = waveshare_esp32s3r8
+upload_flags = --no-stub
+build_flags =
+    ${esp32.build_flags}
+    ${psram.build_flags}
+############ FHATOS #############
+    -DFOS_MACHINE_ARCH=${this.__env__}
+    -DFOS_MACHINE_MODEL=${this.board}
+
+###########################################
+###########################################
 [env:esp32-s3-mini]
 extends = esp32
 board = lolin_s3_mini
@@ -223,52 +238,27 @@ build_flags =
     -DFOS_MACHINE_ARCH=${this.__env__}
     -DFOS_MACHINE_MODEL=${this.board}
 
+###########################################
+###########################################
 [env:esp32-t7-s3]
 extends = esp32
 board = lilygo_t7_s3
 build_flags =
     ${esp32.build_flags}
     ${psram.build_flags}
-    #${bluetooth.build_flags}
-    ############ FHATOS #############
+#${bluetooth.build_flags}
+############ FHATOS #############
     -DFOS_MACHINE_ARCH=${this.__env__}
     -DFOS_MACHINE_MODEL=${this.board}
 
 ###########################################
 ############ RASBERRY PI ZERO #############
 ###########################################
-[env:rpi]
-platform = raspberrypi
-board = pico
-framework = arduino
-#platform_packages =
-#    platformio/toolchain-gccarmlinuxgnueabi@^1.40802.0
+
+# USE fhat-dev
 
 ############################################
 ################## NATIVE ##################
 ############################################
-[env:native]
-platform = native
-framework =
-upload_protocol =
-lib_deps =
-build_flags =
-    ${common.build_flags}
-    ${env.build_flags}
-    -std=gnu++2a
-    -DNATIVE
-    -I build/_deps/paho-mqttpp3-src/include/
-test_filter =
-#language/test_parser
-#language/test_fluent
-#structure/kernel/test_f_scheduler
-test_ignore =
-    CMakeFiles/**.*
-#util/test_mutex
-#structure/test_furi
-#language/test_parser
-#language/test_fluent
-#language/test_obj
-#language/test_binary_obj
-#process/router/test_router
-#process/actor/test_actor
+
+# USE fhat-dev
