stated with a generic type obj which is an obj with no value.

--- a/platformio.ini
+++ b/platformio.ini
@@ -167,7 +167,7 @@ lib_deps =
     FS
     LittleFS
     knolleary/PubSubClient@^2.8
-    fastled/FastLED@^3.8.0
+#    fastled/FastLED@^3.8.0
 # dvarrel/ESPping@^1.0.4
 # lennarthennigs/ESP Telnet@^2.2.1
 extends = serial # or ota
