added ESP32-S3-Geek thumbdrive with LCD processor to the list of supported hardware.

--- a/platformio.ini
+++ b/platformio.ini
@@ -190,7 +190,6 @@ board_build.partitions = ${partition.large_code}
 build_flags =
     ${esp32.build_flags}
     ${psram.build_flags}
-############ FHATOS #############
     -DFOS_MACHINE_ARCH=${this.__env__}
     -DFOS_MACHINE_MODEL=${this.board}
 
@@ -221,7 +220,6 @@ upload_flags = --no-stub
 build_flags =
     ${esp32.build_flags}
     ${psram.build_flags}
-############ FHATOS #############
     -DFOS_MACHINE_ARCH=${this.__env__}
     -DFOS_MACHINE_MODEL=${this.board}
 
@@ -234,7 +232,6 @@ board_build.partitions = ${partition.large_code}
 build_flags =
     ${esp32.build_flags}
     ${psram.build_flags}
-#   ############ FHATOS #############
     -DFOS_MACHINE_ARCH=${this.__env__}
     -DFOS_MACHINE_MODEL=${this.board}
 
@@ -250,6 +247,18 @@ build_flags =
 ############ FHATOS #############
     -DFOS_MACHINE_ARCH=${this.__env__}
     -DFOS_MACHINE_MODEL=${this.board}
+
+###########################################
+###########################################
+[env:esp32-s3-geek]
+extends = esp32
+board = waveshare_esp32s3_geek
+build_flags =
+    ${esp32.build_flags}
+    ${psram.build_flags}
+    -DFOS_MACHINE_ARCH=${this.__env__}
+    -DFOS_MACHINE_MODEL=${this.board}
+
 
 ###########################################
 ############ RASBERRY PI ZERO #############
